Fixed issues for active system user, re-label active User, required fields for system, and  system user, and edit user shifts up the edit form. Changed confirmations to devextreme instead of bootstrap. Added required field to agile team management page instead of disable submit.

--- a/portal/src/app/agile-team/agile-team.component.css
+++ b/portal/src/app/agile-team/agile-team.component.css
@@ -36,6 +36,10 @@
     display: none;
 }
 
+.hide {
+    visibility: hidden;
+}
+
 #agileChange{
     font-size: 20px;
     font-family: Monda,'Helvetica Neue', Helvetica, Arial, sans-serif;
